src/app/shared/components/toast/toast.component.css
.toast-container {
  position: fixed;
  top: 0px;
  right: 20px;
  z-index: 1100;
}

.toast{
  width: 350px;
  height: 70px;
  background-color: var(--primary-color);
  color: var(--white-font-color);
  font-weight: 500;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
  border-radius: 4px;
  transform: translateX(100%);
  position: relative;
  overflow: hidden;
  cursor: pointer;
  transition: background-color 0.4s ease;
  animation: moveDown var(--tempo-surgimento) linear forwards
}

.toast:hover{
  background-color: #3e7baa;
}

.toast-dismiss{
  transform: translateY(0); 
}

.toast-success::after, .toast-error::after{
  content: '';
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 5px;
  animation: anim var(--tempo-toast) linear forwards;
}

.toast-success::after{
  background-color: var(--cor-icone-verde);
}

.toast-error::after{
  background-color: var(--cor-icone-vermelho);
}

.toast img{
  width: 35px;
  height: 35px;
  color: red;
}

@keyframes anim { 100% { width: 0; } }
@keyframes moveDown {
  from {
    transform: translateY(-100%);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
@keyframes dismiss { 
  95%{
    display: none;
  }
  100% {
    scale: 0.4;
  }
 }
@keyframes opacityReduce { 100% { opacity: 0.8; } }

@media (max-width: 576px) {
  .toast-container {
    top: 70%; 
    left: 50%; 
    bottom: 20px;
    transform: translateX(-50%); 
    width: 100%; 
    max-width: 400px; 
    box-sizing: border-box; 
    display: flex;
    flex-direction: column-reverse;
  }
  
  .toast {
    width: 100%; 
    max-width: 100%; 
    height: 50px;
    animation: 
      moveup var(--tempo-surgimento) ease-out forwards,
      dismiss-mobile var(--tempo-dismiss) linear calc(var(--tempo-reduce) + var(--tempo-surgimento)) forwards;
  }

  .toast img {
    width: 28px;
    height: 28px;
  }

  @keyframes moveup {
    from { transform: translateY(100%); opacity: 0; }
    to { transform: translateY(0); opacity: 1; }
  }

  @keyframes dismiss-mobile {
    100% { transform: translateY(100%); opacity: 0; }
  }
}

@media (max-width: 400px) {
  .toast {
    padding: 0.75rem !important; 
  }
  
  .toast img {
    width: 28px !important;
    height: 28px !important;
  }
}

